<resources>
    <string name="app_name">King Game</string>

    <!--共通-->
    <string name="start_capital">START!</string>
    <string name="back">back</string>
    <string name="empty"></string>
    <string name="close">CLOSE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirmed">Confirmed</string>
    <string name="king">KING</string>
    <string name="role_explain">Check the number and press the button\n番号を確認し、ボタンを押してください</string>

    <!-- シェア系 -->
    <string name="shared_sns"><u>Share on SNS☝️</u></string>
    <string name="shared_sns_subject">定番 王様ゲーム</string>
    <string name="shared_sns_message">もう割り箸を無駄にしない!!!\n王様ゲームは、アプリでやる時代!\nhttps://play.google.com/store/apps/details?id=com.hato.king_game</string>

    <!--AdMob 広告-->
    <string name="ad_view_advertising_banner_id">ca-app-pub-8858591747711781/1646509306</string>
    <string name="ad_view_advertising_interstitial_id">ca-app-pub-8858591747711781/4150287671</string>

    <!--Main-->
    <string name="app_title">KINGDOM GAME</string>
    <string name="app_title1">KINGDOM</string>
    <string name="app_title2">Game</string>
    <string name="app_subtitle">王様ゲーム</string>
    <string name="text_explain_input">Please enter the number of people\n人数を入れてね</string>
    <string name="explain_play_number">Please enter the number of people!\n入力フォームに人数を入れてね!</string>
    <string name="validation_string_to_int">Please enter the numbers!\n数字を入れてね！</string>
    <string name="validation_int_range">Please enter number between 1 and 30!\n1以上30までの数字を入れてね！</string>
    <string name="button_name_start"></string>

    <!--Play-->
    <string name="explain_game">Please select one\nひとつ選択してください。</string>
    <string name="button_king_or_citizen">King\nor\nCitizen</string>
    <string name="button_selected">Selected\n選択済</string>
    <string name="show_correct_number">Show Number.</string>
    <string name="next_game">Next Game</string>
    <string name="next_game_explain">Start same number of people!!!\n同じ人数でゲームを再開します。</string>
    <string name="finish_explain_text">If you forget the number,\ntap the Show Number button!\n番号を忘れた場合は、\nCorrectNumberボタンをタップしてね。</string>
    <string name="finish_end_game_word">The numbers were given to everyone.\nNox, everyone "Who is the King?\n
        "全員に番号が行き渡しました。\nさぁ、みんなで「王様だ〜れだ？」</string>

    <!--Citizen-->
    <string name="citizen_title">You are Citizen</string>
    <string name="citizen_message">Citizen</string>
    <string name="citizen_no">NO.%s</string>

    <!--King-->
    <string name="king_title">KING</string>
    <string name="king_explain_jp">あなたは王様です</string>

</resources>