<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/result_normal_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.CitizenActivity"
    >

    <TextView
        android:id="@+id/text_citizen_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textStyle="bold"
        android:text="@string/citizen_no"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_citizen_num_jpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="あなたは1番です"
        app:layout_constraintTop_toBottomOf="@id/text_citizen_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/image_citizen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/citizen_1"
        app:layout_constraintTop_toBottomOf="@id/text_citizen_num_jpn"
        app:layout_constraintBottom_toTopOf="@id/text_citizen_explain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_citizen_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_explain"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintTop_toBottomOf="@id/image_citizen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_ad_view"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_ad_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/result_normal_background"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_view_advertising_banner_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/result_normal_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:id="@+id/button_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>