<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_main_red"
    tools:context=".Activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_thin_blue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/main_king_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:text="@string/app_title1"
            android:textStyle="bold"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/main_king_title2"
            />

        <TextView
            android:id="@+id/main_king_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:text="@string/app_title2"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/main_king_title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/main_king_subtitle"
            />

        <TextView
            android:id="@+id/main_king_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:text="@string/app_subtitle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/main_king_title2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/space_vertical1"
            />

        <Space
            android:id="@+id/space_vertical1"
            android:layout_width="1dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/main_king_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_explain_king_game"
            />

        <TextView
            android:id="@+id/text_explain_king_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_explain_input"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_button_view"
            android:layout_gravity="center_horizontal"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_button_view"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_start"
            >

            <ImageButton
                android:id="@+id/minus_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_round_left"
                android:backgroundTint="@color/plus_button_minus_background"
                android:src="@drawable/outline_remove_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/number_of_people"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/number_of_people"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/primary_main_red"
                android:text="00"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/minus_button"
                app:layout_constraintEnd_toStartOf="@id/plus_button"
                app:layout_constraintBottom_toBottomOf="parent"
                />


            <ImageButton
                android:id="@+id/plus_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_round_right"
                android:backgroundTint="@color/plus_button_minus_background"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/number_of_people"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/start_capital"
            android:textSize="40sp"
            android:background="@drawable/btn_round"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:paddingStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_green"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/view_thin_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_view_advertising_banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>